[FIX] web,mail: prevent cog menu clipping when too wide
Before this commit:
-The cog dropdown was getting clipped on mobile for longer widths

After this commit:
-dropdown is given relative max-width to avoid clipping
-dropdownitem text is truncated for better text handling

Task-3763899

X-original-commit: 60ee36f7ec65e9204cdee847c725e5c3c1ced195

--- a/addons/web/static/src/search/cog_menu/cog_menu.scss
+++ b/addons/web/static/src/search/cog_menu/cog_menu.scss
@@ -2,6 +2,9 @@
     .o-dropdown {
         min-width: 5px;
     }
+    .o-dropdown--menu {
+        max-width: 60vw;
+    }
 }
 .o-dropdown--menu {
     .o_cp_action_app_icon {
